--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -147,3 +147,6 @@
 {{- partial "math.html" .}}
 {{ end }} 
 
+{{- /* Custom CSS for noise tool */}}
+<link rel="stylesheet" type="text/css" href="/assets/css/noise-tool.css"> 
+
