updated for fall 2025

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -148,5 +148,15 @@
 {{ end }} 
 
 {{- /* Custom CSS for noise tool */}}
-<link rel="stylesheet" type="text/css" href="/assets/css/noise-tool.css"> 
+<link rel="stylesheet" type="text/css" href="/assets/css/noise-tool.css">
+
+{{- /* Custom CSS for profile mode links */}}
+<style>
+.profile_inner span a {
+    box-shadow: 0 2px 0 #ff8c00;
+}
+.profile_inner span a:hover {
+    box-shadow: 0 2px 0 #ff6600;
+}
+</style> 
 
