--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,6 +5,12 @@
     {{ partial "breadcrumbs.html" . }}
     <h1 class="post-title entry-hint-parent">
       {{ .Title }}
+      {{- if .Params.status }}
+      {{- $statusClass := "published" }}
+      {{- if eq .Params.status "Forthcoming" }}{{ $statusClass = "forthcoming" }}{{ end }}
+      {{- if eq .Params.status "Working Paper" }}{{ $statusClass = "working-paper" }}{{ end }}
+      <span class="paper-status {{ $statusClass }}">{{ .Params.status }}</span>
+      {{- end }}
       {{- if .Draft }}
       <span class="entry-hint" title="Draft">
         <svg xmlns="http://www.w3.org/2000/svg" height="42" viewBox="0 -960 960 960" fill="currentColor">
